# Paper2Code-Enhanced

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  openapi.json  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-sandboxed-execution/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-database-persistence-rlm-logging/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  (+3 more)
codes/: 0_pdf_process.py  1.1_extract_config.py  1.2_rag_config.py  1_planning.py  1_planning_llm.py  2_analyzing.py  2_analyzing_llm.py  3.1_coding_sh.py  3_coding.py  3_coding_llm.py  4_debugging.py  __init__.py  db.py  db_query.py  eval.py  executor.py  pipeline.py  server.py  utils.py
data/paper2code/: README.md  dataset_info.json
data/prompts/: ref_based.txt  ref_free.txt
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md  cli-walkthrough.md  manifest.json
examples/: Transformer.json  Transformer_cleaned.json  Transformer_cleaned.tex
paper2code-cli/: .goreleaser.yaml  .printing-press-patches.json  .printing-press.json  AGENTS.md  LICENSE  Makefile  NOTICE  README.md  SKILL.md  go.mod  manifest.json  spec.json
scripts/: run.sh  run_latex.sh  run_latex_llm.sh  run_llm.sh  server.sh
tests/: mock_db_populate.py  test_cli_interop.py  test_db_schema.py  test_pdf_process.py
(+61 files in other folders)
