[project]
name = "paper2code-enhanced"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.103.1",
    "openai>=1.65.4",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.9.0",
    "transformers>=5.0.0",
    "vllm>=0.20.0",
    "docker>=7.1.0",
    "sqlmodel>=0.0.21",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
paper2code = "codes.pipeline:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["codes"]
